# rust-examples

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: onmcu.yml
lp-cc1312r7/: Cargo.toml  build.rs  memory.x
lp-cc1312r7/.cargo/: config.toml
nucleo-f401re/: Cargo.toml
nucleo-f401re-serial/: Cargo.toml
nucleo-f401re-serial/.cargo/: config.toml
nucleo-f401re/.cargo/: config.toml
nucleo-f439zi/: Cargo.toml
nucleo-f439zi/.cargo/: config.toml
nucleo-h743zi/: Cargo.toml
nucleo-h743zi/.cargo/: config.toml
nucleo-wb55rg/: Cargo.toml
nucleo-wb55rg/.cargo/: config.toml
nucleo-wl55jc/: Cargo.toml
nucleo-wl55jc/.cargo/: config.toml
