[package]
name = "lp-cc1312r7"
version = "0.1.0"
edition = "2021"

# CC1312R7 has no embassy/HAL support, so this is a bare-metal example built
# directly on cortex-m-rt and the device PAC. The PAC is pulled in (with its
# `rt` feature for the interrupt vector table) ready for peripheral access when
# the future serial binary is added.

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cc13x2x7_cc26x2x7_pac = { version = "0.10.3", features = ["rt"] }
semihosting = "0.1"

[[bin]]
name = "rtt-counter"
path = "src/bin/rtt_counter.rs"
