[package]
name = "nucleo-wb55rg"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "defmt", "executor-thread"] }
embassy-stm32 = { version = "0.6", features = ["defmt", "stm32wb55rg", "time-driver-any", "memory-x", "rt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
semihosting = "0.1"

[[bin]]
name = "rtt-counter"
path = "src/bin/rtt_counter.rs"
